<resources>
    <string name="app_name">Anything</string>
    <string name="top_icon">Back</string>
    <string name="stock_id">Product ID:</string>
    <string name="stock_id_entry">Product ID</string>
    <string name="name">Name:</string>
    <string name="name_entry">Name</string>
    <string name="category">Category:</string>
    <string name="category_entry">Category</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_entry">Quantity</string>
    <string name="unit_price">Unit Price:</string>
    <string name="unit_price_entry">Unit Price</string>
    <string name="total_price">Total Price:</string>
    <string name="total_price_entry">Total Price</string>
    <string name="add_heading">Add Product Details</string>
    <string name="edit_heading">Edit Product Details</string>
    <string name="stock_id_entry_edit">A0021</string>
    <string name="name_entry_edit">Cheese</string>
    <string name="category_entry_edit">Food</string>
    <string name="quantity_entry_edit">25</string>
    <string name="unit_price_entry_edit">500</string>
    <string name="total_price_entry_edit">12500</string>
    <string name="Stock_Details_total_data">10000</string>
    <string name="Stock_Details_Total">Total Price:</string>
    <string name="Stock_Details_Unit_data">500</string>
    <string name="Stock_Details_Unit">Unit Price:</string>
    <string name="Stock_Details_Quantity_data">20</string>
    <string name="Stock_Details_Quantity">Quantity:</string>
    <string name="Stock_Details_Category_data">Food</string>
    <string name="Stock_Details_Category">Category:</string>
    <string name="Stock_Details_Name_data">Milk</string>
    <string name="Stock_Details_Name">Name:</string>
    <string name="Stock_Details_StockID_data">A00021</string>
    <string name="Stock_Details_StockID">Product ID:</string>
    <string name="stock_details">Product Details</string>
    <string name="stock">Product</string>
    <string name="customer">Customer</string>
    <string name="orders">Orders</string>
    <string name="supplier">Supplier</string>
    <string name="delete_stock">Delete_stock</string>
    <string name="products_heading">Products</string>
    <string name="search">Search</string>
    <string name="milk">Milk</string>
    <string name="sanitizers">Sanitizers</string>
    <string name="food">Food</string>
    <string name="chemicals">Chemicals</string>
    <string name="brushes">Brushes</string>
    <string name="cleaning_equipment">Cleaning Equipment</string>
    <string name="bandages">Bandages</string>
    <string name="pharmaceuticals">Pharmaceuticals</string>
    <string name="cool_drinks">Cool Drinks</string>
    <string name="beverages">Beverages</string>
    <string name="baby_gift_set">Baby Gift Set</string>
    <string name="baby_products">Baby Products</string>
    <string name="save">Save</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="admin">Admin</string>
    <string name="_69">69</string>
    <string name="_420">420</string>
    <string name="addimage">AddImage</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="anything">AnyThing</string>
    <string name="admin_profile">Admin profile</string>
    <string name="admin_id">Admin ID:</string>
    <string name="adm01">ADM01</string>
    <string name="kasun_jay">Kasun Jay</string>
    <string name="username">Username:</string>
    <string name="kazjay">KAZJAY</string>
    <string name="password">Password:</string>
    <string name="pas">************</string>
    <string name="phone_number">Phone number:</string>
    <string name="e_mail">E-mail:</string>
    <string name="kaz_gmail_com">kaz@gmail.com</string>
    <string name="_0718945637">0718945637</string>
    <string name="customer_id">Customer ID:</string>
    <string name="customer_id_entry">Customer ID</string>
    <string name="customer_name">Customer Name:</string>
    <string name="customer_name_entry">Customer Name</string>
    <string name="email">Email:</string>
    <string name="email_entry">Email</string>
    <string name="phone">Phone:</string>
    <string name="phone_entry">Phone</string>
    <string name="joined_date">Joined Date:</string>
    <string name="joined_date_entry">Joined Date</string>
    <string name="customer_add_heading">Add Customer Details</string>
    <string name="customer_edit_heading">Edit Customer Details</string>
    <string name="customer_id_entry_edit">C0010</string>
    <string name="customer_name_entry_edit">Kamal Perera</string>
    <string name="email_entry_edit">kamalp@gmail.com</string>
    <string name="phone_entry_edit">0112338394</string>
    <string name="joined_date_entry_edit">20.06.2015</string>
    <string name="customer_Details_JoinedDate_data">08.06.2017</string>
    <string name="customer_Details_JoinedDate">Joined Date:</string>
    <string name="customer_Details_Phone_data">0112736379</string>
    <string name="customer_Details_Phone">Phone:</string>
    <string name="customer_Details_Email_data">kamalp@gmail.com</string>
    <string name="customer_Details_Email">Email:</string>
    <string name="customer_Details_Name_data">Kamal Perera</string>
    <string name="customer_Details_Name">Customer Name:</string>
    <string name="customer_Details_CustomerID_data">C0010</string>
    <string name="customer_Details_CustomerID">Customer ID:</string>
    <string name="customer_details">Customer Details</string>
    <string name="delete_customer">Delete_customer</string>
    <string name="customer_products_heading">Customers</string>
    <string name="add_phone">Add Phone</string>
    <string name="update_phone">Update Phone</string>
    <string name="orders_heading">Orders</string>
    <string name="order_id">Order ID : </string>
    <string name="orderId_hint">Enter Order ID</string>
    <string name="itemName">Item Name</string>
    <string name="itemName_hint">Enter Item Name</string>
    <string name="brand">Brand</string>
    <string name="brand_hint">Enter Brand Name</string>
    <string name="customerName">Customer</string>
    <string name="customerHint">Enter Customer Name</string>
    <string name="ItemDescription">Description</string>
    <string name="Description_Hint">Enter Description</string>
    <string name="required_Date">Required Date</string>
    <string name="requiredDate_Hint">Enter Required Date</string>
    <string name="order1">Order_001</string>
    <string name="DisplayRequiredDate1">Required Date : 21/02/2021</string>
    <string name="order2">Order_002</string>
    <string name="DisplayRequiredDate2">Required Date : 20/03/2021</string>
    <string name="order3">Order_003</string>
    <string name="DisplayRequiredDate3">Required Date : 14/06/2021</string>
    <string name="order4">Order_004</string>
    <string name="DisplayRequiredDate4">Required Date : 14/10/2021</string>
    <string name="order5">Order_005</string>
    <string name="DisplayRequiredDate5">Required Date : 15/09/2021</string>
    <string name="order6">Order_006</string>
    <string name="DisplayRequiredDate6">Required Date : 15/12/2021</string>
    <string name="order7">Order_007</string>
    <string name="DisplayRequiredDate7">Required Date : 17/08/2021</string>
    <string name="addOrders_heading">Add Order Details</string>
    <string name="Order_Details_OrderId">Order ID :</string>
    <string name="Order_Details_OrderId_data">Order_001</string>
    <string name="Order_Details_ItemName">Item Name :</string>
    <string name="Order_Details_ItemName_data">Biscuits</string>
    <string name="Order_Details_Brand">Brand :</string>
    <string name="Order_Details_Brand_data">Munchee</string>
    <string name="Order_Details_Customer">Customer :</string>
    <string name="Order_Details_Customer_data">Peter\'s Store</string>
    <string name="Order_Details_Quantity">Quantity :</string>
    <string name="Order_Details_Quantity_data">2000</string>
    <string name="Order_Details_RequiredDate">Required Date :</string>
    <string name="Order_Details_RequiredDate_data">21/02/2021</string>
    <string name="order_edit_heading">Edit Order Details</string>
    <string name="delete_order">Delete Order Details</string>
    <string name="order_details">Order Details</string>
    <string name="order_id_entry_edit">Order_001</string>
    <string name="ItemName_entry_edit">Biscuits</string>
    <string name="brand_entry_edit">Munchee</string>
    <string name="customer_entry_edit">Peter\'s Store</string>
    <string name="ItemDescription_entry_edit">2000 Chocolate Biscuits</string>
    <string name="required_Date_entry_edit">21/02/2021</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter Name</string>
    <string name="address">Address :</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="peter_parker">Peter Parker</string>
    <string name="peterparker_gmail_com">PeterParker@gmail.com</string>
    <string name="_011_2562341">011 2562341</string>
    <string name="_192_1b_mt_lavinia">192/1b,Mt.Lavinia</string>
    <string name="peterparker">peterparker</string>
    <string name="maryjane">maryJane</string>
    <string name="Order_Details_Description">Description :</string>
    <string-array name="cat">
        <item>Food</item>
        <item>Chemicals</item>
        <item>Cleaning Equipment</item>
        <item>Pharmaceuticals</item>
    </string-array>

</resources>
